--- a/notebooks/cheap_optical_flow_eval.ipynb
+++ b/notebooks/cheap_optical_flow_eval.ipynb
@@ -327,7 +327,11 @@
     "#     )\n",
     "#     fig = go.Figure(data=[trace0])\n",
     "    \n",
-    "    return fig.to_html(include_plotlyjs=False, full_html=False)\n",
+    "    center = xyzrgb[:, :3].mean(axis=0)\n",
+    "    footer = \"<i>Showing %s of %s points with mean (%s, %s, %s)</i>\" % (\n",
+    "                    len(pcloud_df), xyzrgb.shape[0], center[0], center[1], center[2])\n",
+    "    \n",
+    "    return fig.to_html(include_plotlyjs=False, full_html=False) + '<br/>' + footer\n",
     "#     fig_html = plotly.offline.plot(fig, include_plotlyjs=True, output_type='file', filename='/tmp/yay.html')\n",
     "    \n",
     "#     return \"<iframe>\" + open('/tmp/yay.html').read() + \"</iframe>\"\n",
@@ -644,7 +648,7 @@
     "# Please extract deepdeform_v1.7z to a directory and provide the target below:\n",
     "DD_DATA_ROOT = '/opt/psegs/ext_data/deepdeform_v1/'\n",
     "\n",
-    "def dd_load_oflow(path):\n",
+    "def dd_load_raw_flow(path):\n",
     "    # Based upon https://github.com/AljazBozic/DeepDeform/blob/master/utils.py#L1\n",
     "    import shutil\n",
     "    import struct\n",
@@ -652,7 +656,7 @@
     "    import numpy as np\n",
     "\n",
     "    # Flow is stored row-wise in order [channels, height, width].\n",
-    "    assert os.path.isfile(path)\n",
+    "    assert os.path.isfile(path), path\n",
     "\n",
     "    flow_gt = None\n",
     "    with open(path, 'rb') as fin:\n",
@@ -662,107 +666,156 @@
     "        n_elems = height * width * channels\n",
     "\n",
     "        flow = struct.unpack('f' * n_elems, fin.read(n_elems * 4))\n",
-    "        flow_gt = np.asarray(flow, dtype=np.float32).reshape([channels, height, width])\n",
+    "        raw_flow_gt = np.asarray(flow, dtype=np.float32).reshape([channels, height, width])\n",
+    "    return raw_flow_gt\n",
+    "\n",
+    "def dd_load_oflow(path):\n",
+    "    raw_flow_gt = dd_load_raw_flow(path)\n",
     "\n",
     "    # Match format used in this analysis\n",
-    "    flow_gt = np.moveaxis(flow_gt, 0, -1) # (h, w, 2)\n",
+    "    flow_gt = np.moveaxis(raw_flow_gt, 0, -1) # (h, w, 2)\n",
     "    invalid_flow = flow_gt == -np.Inf\n",
     "    flow_gt[invalid_flow] = 0.0\n",
     "    return flow_gt\n",
     "\n",
-    "def dd_load_sflow(path):\n",
-    "    # Based upon https://github.com/AljazBozic/DeepDeform/blob/master/utils.py#L1\n",
-    "    import shutil\n",
-    "    import struct\n",
-    "    import os\n",
-    "    import numpy as np\n",
+    "def dd_load_depth_meters(path):\n",
     "    import imageio\n",
-    "\n",
-    "    # Scene Flow is stored row-wise in order [channels (x, y, z), height, width].\n",
-    "    assert os.path.isfile(path)\n",
-    "\n",
-    "    flow_gt = None\n",
-    "    with open(path, 'rb') as fin:\n",
-    "        width = struct.unpack('I', fin.read(4))[0]\n",
-    "        height = struct.unpack('I', fin.read(4))[0]\n",
-    "        channels = struct.unpack('I', fin.read(4))[0]\n",
-    "        n_elems = height * width * channels\n",
-    "        flow = struct.unpack('f' * n_elems, fin.read(n_elems * 4))\n",
-    "        flow_gt = np.asarray(flow, dtype=np.float32).reshape([channels, height, width])\n",
-    "\n",
-    "    sflow_gt = np.moveaxis(flow_gt, 0, -1) # (h, w, 3)\n",
-    "        \n",
-    "    # \"Every pixel contains 3 values for flow in x, y and z direction, in meters\"\n",
-    "    # So we need the depth for frame 1 at least\n",
-    "    obj_id, src_id, target_id = os.path.basename(path).replace('.sflow', '').split('_')\n",
-    "    depth_path = os.path.join(os.path.dirname(path), '../depth/%s.png' % src_id)\n",
-    "    depth_img_raw = imageio.imread(depth_path)\n",
     "    \n",
-    "    # \"depth images as 16-bit .png (divide by 1000 to obtain depth in meters)\"\n",
-    "    d_uvd_meters = depth_img_raw.astype('float64') / 1000.\n",
-    "        \n",
-    "    sflow_uv_dxyz = np.dstack([d_uvd_meters[:, :, np.newaxis], sflow_gt])\n",
-    "    return sflow_uv_dxyz\n",
+    "    # \"Every pixel contains 3 values for flow in x, y and z direction, in meters\"\n",
+    "    depth_img_raw = imageio.imread(path)\n",
+    "    d_meters = depth_img_raw.astype('float64') / 1000.\n",
+    "    return d_meters\n",
     "\n",
-    "\n",
-    "def dd_convert_sflow(K, sflow_uv_dxyz):\n",
-    "    import numpy as np\n",
-    "\n",
-    "    h, w = sflow_uv_dxyz.shape[:2]\n",
+    "def dd_load_sflow(sflow_path):\n",
+    "    # NB: we actually ignore the the DeepDeform SceneFlow data since it appears to be\n",
+    "    # deduced from the optical flow / visual point correspondence.  So we just\n",
+    "    # do the same deduction but capture the Scene Flow in uvd form; Deep\n",
+    "    # Deform has it in (x, y, z) [meters]\n",
+    "    raw_flow = dd_load_raw_flow(sflow_path.replace('.sflow', '.oflow').replace('scene_flow', 'optical_flow'))\n",
+    "    raw_flow = np.moveaxis(raw_flow, 0, -1) # (h, w, 2)\n",
+    "    \n",
+    "    # File name format: {obj_id}_{src_frame}_{dest_frame}.sflow\n",
+    "    obj_id, src_id, target_id = os.path.basename(sflow_path).replace('.sflow', '').split('_')\n",
+    "    \n",
+    "    # So we need the depth for frame 1 at least\n",
+    "    depth_path1 = os.path.join(os.path.dirname(sflow_path), '../depth/%s.png' % src_id)\n",
+    "    depth_path2 = os.path.join(os.path.dirname(sflow_path), '../depth/%s.png' % target_id)\n",
+    "    \n",
+    "    d1 = dd_load_depth_meters(depth_path1)\n",
+    "    d2 = dd_load_depth_meters(depth_path2)\n",
+    "    \n",
+    "    h, w = d1.shape[:2]\n",
     "    px_y = np.tile(np.arange(h)[:, np.newaxis], [1, w])\n",
     "    px_x = np.tile(np.arange(w)[np.newaxis, :], [h, 1])\n",
     "    pxy = np.concatenate([px_y[:,:,np.newaxis], px_x[:, :, np.newaxis]], axis=-1)\n",
-    "\n",
+    "    pxy = pxy.astype(np.float32)\n",
     "    \n",
-    "    sflow_uv_ijdxyz = np.dstack([pxy, sflow_uv_dxyz])\n",
-    "    sflow_ijdxyz = sflow_uv_ijdxyz.reshape([-1, 6])\n",
+    "    uvd1 = np.dstack([pxy, d1]).reshape([-1, 3])\n",
+    "    uvd2 = np.dstack([pxy + raw_flow, d2]).reshape([-1, 3])\n",
     "    \n",
-    "    # Trim invalid / invisible\n",
-    "    sflow_ijdxyz = sflow_ijdxyz[sflow_ijdxyz[:, -1] != -np.Inf]\n",
-    "\n",
-    "    uvdviz_im1 = np.ones((sflow_ijdxyz.shape[0], 4))\n",
-    "    uvdviz_im1[:, 0] = sflow_ijdxyz[:, 1]\n",
-    "    uvdviz_im1[:, 1] = sflow_ijdxyz[:, 0]\n",
-    "    uvdviz_im1[:, 2] = sflow_ijdxyz[:, 2]\n",
-    "\n",
-    "    fx, fy, cx, cy = K[0, 0], K[1, 1], K[0, 2], K[1, 2]\n",
-    "    rays = np.zeros((h, w, 3))\n",
-    "    rays[:, :, 0] = (rays[:, :, 0] - cy) / fy\n",
-    "    rays[:, :, 1] = (rays[:, :, 1] - cx) / fx\n",
-    "    rays[:, :, 2] = 1\n",
-    "    rays /= np.linalg.norm(rays, axis=-1)[:, :, np.newaxis]\n",
-    "\n",
-    "    yxz_1 = rays * sflow_uv_dxyz[:, :, 0][:, :, np.newaxis]\n",
-    "    yxz_2 = yxz_1 + sflow_uv_dxyz[:, :, (2, 1, 3)]\n",
-    "    xyz_2 = yxz_2[:, :, (1, 0, 2)]\n",
+    "    uvdviz_im1 = np.zeros((uvd1.shape[0], 4))\n",
+    "    uvdviz_im1[:, :3] = uvd1\n",
+    "    uvdviz_im1[:, -1] = (raw_flow != -np.Inf).reshape([-1, 2])[:, 0]\n",
     "    \n",
-    "    xyz_2_valid = xyz_2.reshape([-1, 3])\n",
-    "    xyz_2_valid = xyz_2_valid[xyz_2_valid[:, 0] != -np.Inf]\n",
-    "    \n",
-    "    # nawwww use the oflow look at the paper they prolly are inferring SF from oflow and depth \n",
-    "    \n",
-    "    # DeepDeform scene flow is always visible -> visible\n",
-    "    assert xyz_2_valid.shape[0] == uvdviz_im1.shape[0], (xyz_2_valid.shape, uvdviz_im1.shape)\n",
-    "    \n",
-    "    uvd2 = K[:3, :3].dot(xyz_2_valid.T)\n",
-    "    uvd2[0:2, :] /= uvd2[2, :]\n",
-    "    uvd2 = uvd2.T\n",
-    "    \n",
-    "    uvdviz_im2 = np.ones((xyz_2_valid.shape[0], 4))\n",
-    "    uvdviz_im2[:, 0:3] = uvd2\n",
-    "    \n",
-    "    \n",
-    "#     uvdviz_im2[:, 0] = (fx * xyz_2_valid[:, 0]) / (xyz_2_valid[:, 2] + cx)\n",
-    "#     uvdviz_im2[:, 1] = (fy * xyz_2_valid[:, 1]) / (xyz_2_valid[:, 2] + cy)\n",
-    "#     uvdviz_im2[:, 2] = np.linalg.norm(xyz_2_valid, axis=1)\n",
+    "    uvdviz_im2 = np.zeros((uvd2.shape[0], 4))\n",
+    "    uvdviz_im2[:, :3] = uvd2\n",
+    "    uvdviz_im2[:, -1] = (uvdviz_im2[:, 0] != -np.Inf)\n",
     "    \n",
     "    return uvdviz_im1, uvdviz_im2\n",
+    "\n",
+    "\n",
+    "# def dd_load_sflow(path):\n",
+    "#     # Based upon https://github.com/AljazBozic/DeepDeform/blob/master/utils.py#L1\n",
+    "#     import shutil\n",
+    "#     import struct\n",
+    "#     import os\n",
+    "#     import numpy as np\n",
+    "#     import imageio\n",
+    "\n",
+    "#     # Scene Flow is stored row-wise in order [channels (x, y, z), height, width].\n",
+    "#     assert os.path.isfile(path)\n",
+    "\n",
+    "#     flow_gt = None\n",
+    "#     with open(path, 'rb') as fin:\n",
+    "#         width = struct.unpack('I', fin.read(4))[0]\n",
+    "#         height = struct.unpack('I', fin.read(4))[0]\n",
+    "#         channels = struct.unpack('I', fin.read(4))[0]\n",
+    "#         n_elems = height * width * channels\n",
+    "#         flow = struct.unpack('f' * n_elems, fin.read(n_elems * 4))\n",
+    "#         flow_gt = np.asarray(flow, dtype=np.float32).reshape([channels, height, width])\n",
+    "\n",
+    "#     sflow_gt = np.moveaxis(flow_gt, 0, -1) # (h, w, 3)\n",
+    "        \n",
+    "#     # \"Every pixel contains 3 values for flow in x, y and z direction, in meters\"\n",
+    "#     # So we need the depth for frame 1 at least\n",
+    "#     obj_id, src_id, target_id = os.path.basename(path).replace('.sflow', '').split('_')\n",
+    "#     depth_path = os.path.join(os.path.dirname(path), '../depth/%s.png' % src_id)\n",
+    "#     depth_img_raw = imageio.imread(depth_path)\n",
+    "    \n",
+    "#     # \"depth images as 16-bit .png (divide by 1000 to obtain depth in meters)\"\n",
+    "#     d_uvd_meters = depth_img_raw.astype('float64') / 1000.\n",
+    "        \n",
+    "#     sflow_uv_dxyz = np.dstack([d_uvd_meters[:, :, np.newaxis], sflow_gt])\n",
+    "#     return sflow_uv_dxyz\n",
+    "\n",
+    "\n",
+    "# def dd_convert_sflow(K, sflow_uv_dxyz):\n",
+    "#     import numpy as np\n",
+    "\n",
+    "#     h, w = sflow_uv_dxyz.shape[:2]\n",
+    "#     px_y = np.tile(np.arange(h)[:, np.newaxis], [1, w])\n",
+    "#     px_x = np.tile(np.arange(w)[np.newaxis, :], [h, 1])\n",
+    "#     pxy = np.concatenate([px_y[:,:,np.newaxis], px_x[:, :, np.newaxis]], axis=-1)\n",
+    "\n",
+    "    \n",
+    "#     sflow_uv_ijdxyz = np.dstack([pxy, sflow_uv_dxyz])\n",
+    "#     sflow_ijdxyz = sflow_uv_ijdxyz.reshape([-1, 6])\n",
+    "    \n",
+    "#     # Trim invalid / invisible\n",
+    "#     sflow_ijdxyz = sflow_ijdxyz[sflow_ijdxyz[:, -1] != -np.Inf]\n",
+    "\n",
+    "#     uvdviz_im1 = np.ones((sflow_ijdxyz.shape[0], 4))\n",
+    "#     uvdviz_im1[:, 0] = sflow_ijdxyz[:, 1]\n",
+    "#     uvdviz_im1[:, 1] = sflow_ijdxyz[:, 0]\n",
+    "#     uvdviz_im1[:, 2] = sflow_ijdxyz[:, 2]\n",
+    "\n",
+    "#     fx, fy, cx, cy = K[0, 0], K[1, 1], K[0, 2], K[1, 2]\n",
+    "#     rays = np.zeros((h, w, 3))\n",
+    "#     rays[:, :, 0] = (rays[:, :, 0] - cy) / fy\n",
+    "#     rays[:, :, 1] = (rays[:, :, 1] - cx) / fx\n",
+    "#     rays[:, :, 2] = 1\n",
+    "#     rays /= np.linalg.norm(rays, axis=-1)[:, :, np.newaxis]\n",
+    "\n",
+    "#     yxz_1 = rays * sflow_uv_dxyz[:, :, 0][:, :, np.newaxis]\n",
+    "#     yxz_2 = yxz_1 + sflow_uv_dxyz[:, :, (2, 1, 3)]\n",
+    "#     xyz_2 = yxz_2[:, :, (1, 0, 2)]\n",
+    "    \n",
+    "#     xyz_2_valid = xyz_2.reshape([-1, 3])\n",
+    "#     xyz_2_valid = xyz_2_valid[xyz_2_valid[:, 0] != -np.Inf]\n",
+    "    \n",
+    "#     # nawwww use the oflow look at the paper they prolly are inferring SF from oflow and depth \n",
+    "    \n",
+    "#     # DeepDeform scene flow is always visible -> visible\n",
+    "#     assert xyz_2_valid.shape[0] == uvdviz_im1.shape[0], (xyz_2_valid.shape, uvdviz_im1.shape)\n",
+    "    \n",
+    "#     uvd2 = K[:3, :3].dot(xyz_2_valid.T)\n",
+    "#     uvd2[0:2, :] /= uvd2[2, :]\n",
+    "#     uvd2 = uvd2.T\n",
+    "    \n",
+    "#     uvdviz_im2 = np.ones((xyz_2_valid.shape[0], 4))\n",
+    "#     uvdviz_im2[:, 0:3] = uvd2\n",
+    "    \n",
+    "    \n",
+    "# #     uvdviz_im2[:, 0] = (fx * xyz_2_valid[:, 0]) / (xyz_2_valid[:, 2] + cx)\n",
+    "# #     uvdviz_im2[:, 1] = (fy * xyz_2_valid[:, 1]) / (xyz_2_valid[:, 2] + cy)\n",
+    "# #     uvdviz_im2[:, 2] = np.linalg.norm(xyz_2_valid, axis=1)\n",
+    "    \n",
+    "#     return uvdviz_im1, uvdviz_im2\n",
     "\n",
     "def dd_create_fp(uri):\n",
     "    if \"dd.sf_gt\" in uri.extra:\n",
     "        K = dd_read_K(os.path.join(DD_DATA_ROOT, uri.extra['dd.K']))\n",
-    "        sflow_uv_dxyz = dd_load_sflow(os.path.join(DD_DATA_ROOT, uri.extra[\"dd.sf_gt\"]))\n",
-    "        uvdviz_im1, uvdviz_im2 = dd_convert_sflow(K, sflow_uv_dxyz)\n",
+    "        uvdviz_im1, uvdviz_im2 = dd_load_sflow(os.path.join(DD_DATA_ROOT, uri.extra[\"dd.sf_gt\"]))\n",
     "    else:\n",
     "        K = None\n",
     "        uvdviz_im1 = None\n",
@@ -849,13 +902,13 @@
     "        \"dd.sf_gt\": \"train/seq000/scene_flow/blackdog_000000_000200.sflow\",\n",
     "        \"dd.K\": \"train/seq000/intrinsics.txt\",\n",
     "    }),\n",
-    "    datum.URI(dataset=DDFactory.DATASET, extra={\n",
-    "        \"dd.input\": \"train/seq000/color/000000.jpg\",\n",
-    "        \"dd.expected_out\": \"train/seq000/color/001200.jpg\",\n",
-    "        \"dd.flow_gt\": \"train/seq000/optical_flow/blackdog_000000_001200.oflow\",\n",
-    "        \"dd.sf_gt\": \"train/seq000/scene_flow/blackdog_000000_001200.sflow\",\n",
-    "        \"dd.K\": \"train/seq000/intrinsics.txt\",\n",
-    "    }),\n",
+    "#     datum.URI(dataset=DDFactory.DATASET, extra={\n",
+    "#         \"dd.input\": \"train/seq000/color/000000.jpg\",\n",
+    "#         \"dd.expected_out\": \"train/seq000/color/001200.jpg\",\n",
+    "#         \"dd.flow_gt\": \"train/seq000/optical_flow/blackdog_000000_001200.oflow\",\n",
+    "#         \"dd.sf_gt\": \"train/seq000/scene_flow/blackdog_000000_001200.sflow\",\n",
+    "#         \"dd.K\": \"train/seq000/intrinsics.txt\",\n",
+    "#     }),\n",
     "    datum.URI(dataset=DDFactory.DATASET, extra={\n",
     "        \"dd.input\": \"train/seq001/color/003400.jpg\",\n",
     "        \"dd.expected_out\": \"train/seq001/color/003600.jpg\",\n",
