--- a/notebooks/cheap_optical_flow_eval.ipynb
+++ b/notebooks/cheap_optical_flow_eval.ipynb
@@ -707,19 +707,34 @@
     "    h, w = d1.shape[:2]\n",
     "    px_y = np.tile(np.arange(h)[:, np.newaxis], [1, w])\n",
     "    px_x = np.tile(np.arange(w)[np.newaxis, :], [h, 1])\n",
-    "    pxy = np.concatenate([px_y[:,:,np.newaxis], px_x[:, :, np.newaxis]], axis=-1)\n",
-    "    pxy = pxy.astype(np.float32)\n",
+    "    pyx = np.concatenate([px_y[:,:,np.newaxis], px_x[:, :, np.newaxis]], axis=-1)\n",
+    "    pyx = pyx.astype(np.float32)\n",
     "    \n",
-    "    uvd1 = np.dstack([pxy, d1]).reshape([-1, 3])\n",
-    "    uvd2 = np.dstack([pxy + raw_flow, d2]).reshape([-1, 3])\n",
+    "    vud1 = np.dstack([pyx, d1]).reshape([-1, 3])\n",
+    "    uvdviz_im1 = np.zeros((vud1.shape[0], 4))\n",
+    "    uvdviz_im1[:, :3] = vud1[:, (1, 0, 2)]\n",
+    "    uvdviz_im1[:, -1] = np.logical_and(\n",
+    "                            (raw_flow != -np.Inf).reshape([-1, 2])[:, 0], # Flow is valid\n",
+    "                            uvdviz_im1[:, 2] > 0)                        # Depth is valid\n",
     "    \n",
-    "    uvdviz_im1 = np.zeros((uvd1.shape[0], 4))\n",
-    "    uvdviz_im1[:, :3] = uvd1\n",
-    "    uvdviz_im1[:, -1] = (raw_flow != -np.Inf).reshape([-1, 2])[:, 0]\n",
+    "    vu2 = (pyx + raw_flow[:, :, (1, 0)]).reshape([-1, 2])\n",
+    "    invalid = np.where(\n",
+    "            (np.rint(vu2[:, 0]) < 0) | (np.rint(vu2[:, 0]) >= h) |\n",
+    "            (np.rint(vu2[:, 1]) < 0) | (np.rint(vu2[:, 1]) >= w) |\n",
+    "            (vu2[:, 0] == -np.Inf))\n",
+    "    j2 = np.rint(vu2[:, 0]).astype(np.int64)\n",
+    "    i2 = np.rint(vu2[:, 1]).astype(np.int64)\n",
+    "    j2[invalid] = 0\n",
+    "    i2[invalid] = 0\n",
+    "    d2_col = d2[j2, i2]\n",
+    "    vud2 = np.hstack([vu2, d2_col[:, np.newaxis]])\n",
     "    \n",
-    "    uvdviz_im2 = np.zeros((uvd2.shape[0], 4))\n",
-    "    uvdviz_im2[:, :3] = uvd2\n",
-    "    uvdviz_im2[:, -1] = (uvdviz_im2[:, 0] != -np.Inf)\n",
+    "    uvdviz_im2 = np.ones((vud1.shape[0], 4))\n",
+    "    uvdviz_im2[:, :3] = vud2[:, (1, 0, 2)]\n",
+    "    uvdviz_im2[invalid, -1] = 0\n",
+    "    \n",
+    "#     vudviz_im2[:, -1] = (vudviz_im2[:, 0] != -np.Inf)\n",
+    "#     vudviz_im1[:, -1] = np.logical_and(vudviz_im1[:, -1], (vudviz_im1[:, 2] > 0))\n",
     "    \n",
     "    return uvdviz_im1, uvdviz_im2\n",
     "\n",
@@ -902,7 +917,7 @@
     "        \"dd.sf_gt\": \"train/seq000/scene_flow/blackdog_000000_000200.sflow\",\n",
     "        \"dd.K\": \"train/seq000/intrinsics.txt\",\n",
     "    }),\n",
-    "#     datum.URI(dataset=DDFactory.DATASET, extra={\n",
+    "#     datum.URI(dataset=DDFactory.DATASET, extra={  FIXME MISSING DEPTH\n",
     "#         \"dd.input\": \"train/seq000/color/000000.jpg\",\n",
     "#         \"dd.expected_out\": \"train/seq000/color/001200.jpg\",\n",
     "#         \"dd.flow_gt\": \"train/seq000/optical_flow/blackdog_000000_001200.oflow\",\n",
