--- a/notebooks/cheap_optical_flow_eval.ipynb
+++ b/notebooks/cheap_optical_flow_eval.ipynb
@@ -221,8 +221,9 @@
     "        xyzrgb2 = uvd_to_xyzrgb(uvd2, self.K, imgs=[self.get_img2()])\n",
     "        html1 = create_xyzrgb_3d_plot_html(xyzrgb1)\n",
     "        html2 = create_xyzrgb_3d_plot_html(xyzrgb2)\n",
+    "        html_sf = create_xyzrgb_3d_sf_plot_html(xyzrgb1, xyzrgb2)\n",
     "        \n",
-    "        html = \"View 1:<br />%s<br /><br />View 2:<br />%s\" % (html1, html2)\n",
+    "        html = \"View 1:<br />%s<br /><br />View 2:<br />%s<br /><br />Flow:<br />%s\" % (html1, html2, html_sf)\n",
     "        return html\n",
     "    \n",
     "    def to_html(self):\n",
@@ -331,8 +332,47 @@
     "    footer = \"<i>Showing %s of %s points with mean (%s, %s, %s)</i>\" % (\n",
     "                    len(pcloud_df), xyzrgb.shape[0], center[0], center[1], center[2])\n",
     "    \n",
-    "    return fig.to_html(include_plotlyjs=False, full_html=False) + '<br/>' + footer\n",
+    "    return fig.to_html(include_plotlyjs=False, full_html=False) + '<br/><br/>' + footer\n",
     "#     fig_html = plotly.offline.plot(fig, include_plotlyjs=True, output_type='file', filename='/tmp/yay.html')\n",
+    "    \n",
+    "def create_xyzrgb_3d_sf_plot_html(xyzrgb1, xyzrgb2, max_points=5000):\n",
+    "    import plotly\n",
+    "    import plotly.graph_objects as go\n",
+    "    import pandas as pd\n",
+    "    \n",
+    "    xyzrgbuvw = np.zeros((xyzrgb1.shape[0], 9))\n",
+    "    xyzrgbuvw[:, :6] = xyzrgb1\n",
+    "    xyzrgbuvw[:, 6:] = xyzrgb2[:, :3] - xyzrgb1[:, :3]\n",
+    "    \n",
+    "#     # Change the colors to make it easier to distinguish source from target\n",
+    "#     xyzrgb1 = xyzrgb1.copy()\n",
+    "#     xyzrgb1[:, (3, 4, 5)] *= 1.5\n",
+    "#     xyzrgb2 = xyzrgb2.copy()\n",
+    "#     xyzrgb2[:, (3, 4, 5)] *= 0.5\n",
+    "    \n",
+    "    pcloud_df = pd.DataFrame(xyzrgbuvw, columns=['x', 'y', 'z', 'r', 'g', 'b', 'u', 'v', 'w'])\n",
+    "    pcloud_df = pcloud_df.sample(n=min(xyzrgbuvw.shape[0], max_points))\n",
+    "    cones = go.Cone(\n",
+    "                x=pcloud_df['x'], y=pcloud_df['y'], z=pcloud_df['z'],\n",
+    "                u=pcloud_df['u'], v=pcloud_df['v'], w=pcloud_df['w'],\n",
+    "                sizemode=\"scaled\",\n",
+    "                sizeref=2,\n",
+    "                colorscale='Blues')\n",
+    "#     ,\n",
+    "#                 marker=dict(size=3, color=pcloud_df[['r', 'g', 'b']], opacity=0.9))\n",
+    "    \n",
+    "    fig = go.Figure(data=[cones])\n",
+    "    fig.update_layout(\n",
+    "            width=900, height=600,\n",
+    "            scene_camera=dict(\n",
+    "                up=dict(x=0, y=-1, z=0),\n",
+    "                center=dict(x=0, y=0, z=0),\n",
+    "                eye=dict(x=1.25, y=-1.25, z=-1.25)\n",
+    "            ),\n",
+    "            scene_aspectmode='data')\n",
+    "    return fig.to_html(include_plotlyjs=False, full_html=False)\n",
+    "    \n",
+    "    \n",
     "    \n",
     "#     return \"<iframe>\" + open('/tmp/yay.html').read() + \"</iframe>\"\n",
     "# #     return fig.to_html(full_html=False, include_plotlyjs=\"cdn\")\n",
