--- a/notebooks/cheap_optical_flow_eval.ipynb
+++ b/notebooks/cheap_optical_flow_eval.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,116 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pypng in /usr/local/lib/python3.8/dist-packages (0.0.20)\n",
-      "Requirement already satisfied: scikit-image in /usr/lib/python3/dist-packages (0.16.2)\n",
-      "fixme installs\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <script src='https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js'></script>\n",
-       "    <script>requirejs.config({\n",
-       "        paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});\n",
-       "        if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Putting analysis lib in /tmp/tmpz7k96gcy_cheap_optical_flow_eval_analysis\n",
-      "running clean\n",
-      "running bdist_egg\n",
-      "running egg_info\n",
-      "writing psegs.egg-info/PKG-INFO\n",
-      "writing dependency_links to psegs.egg-info/dependency_links.txt\n",
-      "writing top-level names to psegs.egg-info/top_level.txt\n",
-      "reading manifest file 'psegs.egg-info/SOURCES.txt'\n",
-      "writing manifest file 'psegs.egg-info/SOURCES.txt'\n",
-      "installing library code to build/bdist.linux-x86_64/egg\n",
-      "running install_lib\n",
-      "running build_py\n",
-      "warning: build_py: byte-compiling is disabled, skipping.\n",
-      "\n",
-      "creating build/bdist.linux-x86_64/egg\n",
-      "creating build/bdist.linux-x86_64/egg/psegs\n",
-      "copying build/lib/psegs/dummyrun.py -> build/bdist.linux-x86_64/egg/psegs\n",
-      "creating build/bdist.linux-x86_64/egg/psegs/datasets\n",
-      "copying build/lib/psegs/datasets/kitti.py -> build/bdist.linux-x86_64/egg/psegs/datasets\n",
-      "copying build/lib/psegs/datasets/idsutil.py -> build/bdist.linux-x86_64/egg/psegs/datasets\n",
-      "copying build/lib/psegs/datasets/kitti_360.py -> build/bdist.linux-x86_64/egg/psegs/datasets\n",
-      "copying build/lib/psegs/datasets/__init__.py -> build/bdist.linux-x86_64/egg/psegs/datasets\n",
-      "copying build/lib/psegs/datasets/nuscenes.py -> build/bdist.linux-x86_64/egg/psegs/datasets\n",
-      "creating build/bdist.linux-x86_64/egg/psegs/util\n",
-      "copying build/lib/psegs/util/__init__.py -> build/bdist.linux-x86_64/egg/psegs/util\n",
-      "copying build/lib/psegs/util/misc.py -> build/bdist.linux-x86_64/egg/psegs/util\n",
-      "copying build/lib/psegs/util/plotting.py -> build/bdist.linux-x86_64/egg/psegs/util\n",
-      "creating build/bdist.linux-x86_64/egg/psegs/table\n",
-      "copying build/lib/psegs/table/sd_db.py -> build/bdist.linux-x86_64/egg/psegs/table\n",
-      "copying build/lib/psegs/table/sd_table.py -> build/bdist.linux-x86_64/egg/psegs/table\n",
-      "copying build/lib/psegs/table/__init__.py -> build/bdist.linux-x86_64/egg/psegs/table\n",
-      "copying build/lib/psegs/browser.py -> build/bdist.linux-x86_64/egg/psegs\n",
-      "creating build/bdist.linux-x86_64/egg/psegs/datum\n",
-      "copying build/lib/psegs/datum/uri.py -> build/bdist.linux-x86_64/egg/psegs/datum\n",
-      "copying build/lib/psegs/datum/bbox2d.py -> build/bdist.linux-x86_64/egg/psegs/datum\n",
-      "copying build/lib/psegs/datum/datumutils.py -> build/bdist.linux-x86_64/egg/psegs/datum\n",
-      "copying build/lib/psegs/datum/transform.py -> build/bdist.linux-x86_64/egg/psegs/datum\n",
-      "copying build/lib/psegs/datum/stamped_datum.py -> build/bdist.linux-x86_64/egg/psegs/datum\n",
-      "copying build/lib/psegs/datum/cuboid.py -> build/bdist.linux-x86_64/egg/psegs/datum\n",
-      "copying build/lib/psegs/datum/frame.py -> build/bdist.linux-x86_64/egg/psegs/datum\n",
-      "copying build/lib/psegs/datum/point_cloud.py -> build/bdist.linux-x86_64/egg/psegs/datum\n",
-      "copying build/lib/psegs/datum/camera_image.py -> build/bdist.linux-x86_64/egg/psegs/datum\n",
-      "copying build/lib/psegs/datum/__init__.py -> build/bdist.linux-x86_64/egg/psegs/datum\n",
-      "copying build/lib/psegs/spark.py -> build/bdist.linux-x86_64/egg/psegs\n",
-      "copying build/lib/psegs/conf.py -> build/bdist.linux-x86_64/egg/psegs\n",
-      "copying build/lib/psegs/dsutil.py -> build/bdist.linux-x86_64/egg/psegs\n",
-      "copying build/lib/psegs/__init__.py -> build/bdist.linux-x86_64/egg/psegs\n",
-      "creating build/bdist.linux-x86_64/egg/psegs/exp\n",
-      "copying build/lib/psegs/exp/semantic_kitti.py -> build/bdist.linux-x86_64/egg/psegs/exp\n",
-      "copying build/lib/psegs/exp/fused_lidar_flow.py -> build/bdist.linux-x86_64/egg/psegs/exp\n",
-      "copying build/lib/psegs/exp/__init__.py -> build/bdist.linux-x86_64/egg/psegs/exp\n",
-      "copying build/lib/psegs/ros.py -> build/bdist.linux-x86_64/egg/psegs\n",
-      "warning: install_lib: byte-compiling is disabled, skipping.\n",
-      "\n",
-      "creating build/bdist.linux-x86_64/egg/EGG-INFO\n",
-      "copying psegs.egg-info/PKG-INFO -> build/bdist.linux-x86_64/egg/EGG-INFO\n",
-      "copying psegs.egg-info/SOURCES.txt -> build/bdist.linux-x86_64/egg/EGG-INFO\n",
-      "copying psegs.egg-info/dependency_links.txt -> build/bdist.linux-x86_64/egg/EGG-INFO\n",
-      "copying psegs.egg-info/top_level.txt -> build/bdist.linux-x86_64/egg/EGG-INFO\n",
-      "zip_safe flag not set; analyzing archive contents...\n",
-      "creating 'dist/psegs-0.0.1-py3.8.egg' and adding 'build/bdist.linux-x86_64/egg' to it\n",
-      "removing 'build/bdist.linux-x86_64/egg' (and everything under it)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-04-20 04:44:41,778\toarph 3069855 : Using source root /tmp/tmpz7k96gcy_cheap_optical_flow_eval_analysis/cheap_optical_flow_eval_analysis \n",
-      "2021-04-20 04:44:41,779\toarph 3069855 : Using source root /tmp/tmpz7k96gcy_cheap_optical_flow_eval_analysis \n",
-      "2021-04-20 04:44:41,822\toarph 3069855 : Generating egg to /tmp/tmp33x8y5k3_oarphpy_eggbuild ...\n",
-      "2021-04-20 04:44:41,834\toarph 3069855 : ... done.  Egg at /tmp/tmp33x8y5k3_oarphpy_eggbuild/cheap_optical_flow_eval_analysis-0.0.0-py3.8.egg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Setup\n",
     "\n",
@@ -218,17 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing cheap_optical_flow_eval_analysis/ofp.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile cheap_optical_flow_eval_analysis/ofp.py\n",
     "\n",
@@ -332,7 +217,7 @@
     "        return xyzrgb1\n",
     "    \n",
     "    def get_xyz2(self):\n",
-    "        uvd1 = self.uvdviz_im2[self.uvdviz_im2[:, -1] == 1, :3]\n",
+    "        uvd2 = self.uvdviz_im2[self.uvdviz_im2[:, -1] == 1, :3]\n",
     "        xyzrgb2 = uvd_to_xyzrgb(uvd2, self.K)\n",
     "        return xyzrgb2\n",
     "    \n",
@@ -561,23 +446,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-04-20 04:44:45,110\toarph 3069855 : Source has changed! Rebuilding Egg ...\n",
-      "2021-04-20 04:44:45,110\toarph 3069855 : Using source root /tmp/tmpz7k96gcy_cheap_optical_flow_eval_analysis/cheap_optical_flow_eval_analysis \n",
-      "2021-04-20 04:44:45,111\toarph 3069855 : Using source root /tmp/tmpz7k96gcy_cheap_optical_flow_eval_analysis \n",
-      "2021-04-20 04:44:45,113\toarph 3069855 : Generating egg to /tmp/tmp1ybxl1a9_oarphpy_eggbuild ...\n",
-      "2021-04-20 04:44:45,123\toarph 3069855 : ... done.  Egg at /tmp/tmp1ybxl1a9_oarphpy_eggbuild/cheap_optical_flow_eval_analysis-0.0.0-py3.8.egg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from cheap_optical_flow_eval_analysis.ofp import *\n",
     "\n",
@@ -809,17 +682,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing cheap_optical_flow_eval_analysis/deepdeform.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile cheap_optical_flow_eval_analysis/deepdeform.py\n",
     "\n",
@@ -1074,21 +939,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-04-20 04:44:55,423\toarph 3069855 : Source has changed! Rebuilding Egg ...\n",
-      "2021-04-20 04:44:55,423\toarph 3069855 : Using source root /tmp/tmpz7k96gcy_cheap_optical_flow_eval_analysis/cheap_optical_flow_eval_analysis \n",
-      "2021-04-20 04:44:55,424\toarph 3069855 : Using source root /tmp/tmpz7k96gcy_cheap_optical_flow_eval_analysis \n",
-      "2021-04-20 04:44:55,426\toarph 3069855 : Generating egg to /tmp/tmp9jsbrml__oarphpy_eggbuild ...\n",
-      "2021-04-20 04:44:55,432\toarph 3069855 : ... done.  Egg at /tmp/tmp9jsbrml__oarphpy_eggbuild/cheap_optical_flow_eval_analysis-0.0.0-py3.8.egg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from cheap_optical_flow_eval_analysis.deepdeform import *"
    ]
@@ -2103,18 +1956,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unmatched ')' (<ipython-input-8-9dc65612d444>, line 153)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-9dc65612d444>\"\u001b[0;36m, line \u001b[0;32m153\u001b[0m\n\u001b[0;31m    fepe_hist_html = img_to_data_uri(matplotlib_fig_to_img(fepe_hist_img)))\u001b[0m\n\u001b[0m                                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched ')'\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     " * for psegs, we have uvd and K\n",
@@ -2184,6 +2030,7 @@
     "    \"\"\"Stats on the scene flow of a `OpticalFlowPair` instance (that has scene flow data)\"\"\"\n",
     "\n",
     "    slots = (\n",
+    "        'fwd_nn_xyz',\n",
     "        'fwd_nn_dist_to_sf_dist',\n",
     "        \n",
     "        'fwd_nnepe_mean',\n",
@@ -2228,21 +2075,25 @@
     "        xyz2 = fp.get_xyz2()\n",
     "        \n",
     "        fwd_nn = get_nearest_neighbors(xyz1, xyz2)\n",
-    "        fwd_nn_dist = np.linalg.norm(fwd_nn - xyz1)\n",
-    "        fwd_sf_dist = np.linalg.norm(xyz2 - xyz1)\n",
-    "        fwd_nn_dist_to_sf_dist = fwd_nn_dist / fwd_sf_dist\n",
-    "        fwd_nn_end_point_error = np.linalg.norm(fwd_nn - np.xyz2)\n",
+    "        fwd_nn_dist = np.linalg.norm(fwd_nn - xyz1, axis=1)\n",
+    "        fwd_sf_dist = np.linalg.norm(xyz2 - xyz1, axis=1)\n",
+    "        fwd_nn_dist_to_sf_dist = fwd_nn_dist.sum() / fwd_sf_dist.sum()\n",
+    "        fwd_nn_end_point_error = np.linalg.norm(fwd_nn - xyz2, axis=1)\n",
     "        \n",
     "        bkd_nn = get_nearest_neighbors(xyz2, xyz1)\n",
-    "        bkd_nn_end_point_error = np.linalg.norm(bkd_nn - np.xyz1)\n",
+    "        bkd_nn_end_point_error = np.linalg.norm(bkd_nn - xyz1, axis=1)\n",
     "        \n",
-    "        fwd_nnepes = sorted(fwd_nn_end_point_error)\n",
+    "        fwd_nnepes = sorted(fwd_nn_end_point_error.tolist())\n",
     "        def percentile(slst, p):\n",
-    "            idx = int(p * len(slist))\n",
-    "            return slist[idx]\n",
+    "            idx = int(p * len(slst))\n",
+    "            return slst[idx]\n",
+    "        \n",
+    "        bin_counts, bin_edges = np.histogram(fwd_nn_end_point_error, bins=1000)\n",
+    "        fwd_nnepe_hist = bin_edges, bin_counts\n",
     "        \n",
     "        return SFlowStats(\n",
     "                 opair=oflow_pair,\n",
+    "                 fwd_nn_xyz=fwd_nn,\n",
     "                 \n",
     "                 fwd_nn_dist_to_sf_dist=fwd_nn_dist_to_sf_dist,\n",
     "                 \n",
@@ -2255,14 +2106,27 @@
     "                 bkd_nnepe_mean=np.mean(bkd_nn_end_point_error),\n",
     "                 bkd_nnepe_sum=np.sum(bkd_nn_end_point_error),\n",
     "            \n",
-    "                 fwd_nnepe_hist=np.histogram(fwd_nn_end_point_error, bins=100))\n",
+    "                 fwd_nnepe_hist=fwd_nnepe_hist)\n",
     "                 \n",
     "    def to_html(self):\n",
+    "        import numpy as np\n",
+    "        \n",
+    "        fwd_nn_xyz = self.fwd_nn_xyz\n",
+    "        fp = self.opair\n",
+    "        uvd2 = fp.uvdviz_im2[fp.uvdviz_im2[:, -1] == 1, :3]\n",
+    "        xyzrgb2 = uvd_to_xyzrgb(uvd2, fp.K, imgs=[fp.get_img2()])\n",
+    "        fwd_nn_xyzrgb = np.ones((fwd_nn_xyz.shape[0] + xyzrgb2.shape[0], 3 + 3)) * 128.\n",
+    "        fwd_nn_xyzrgb[:fwd_nn_xyz.shape[0], :3] = fwd_nn_xyz[:, :3]\n",
+    "        fwd_nn_xyzrgb[fwd_nn_xyz.shape[0]:, :6] = xyzrgb2[:, :6]\n",
+    "        \n",
+    "        fwd_nn_html = create_xyzrgb_3d_plot_html(fwd_nn_xyzrgb)\n",
     "        \n",
     "        import matplotlib.pyplot as plt\n",
     "        fig = plt.figure()\n",
     "        bin_edges, bin_counts = self.fwd_nnepe_hist\n",
+    "        \n",
     "        plt.bar(bin_edges[:-1], bin_counts)\n",
+    "        plt.xlim(left=0)\n",
     "        plt.title(\"Histogram of Forward Nearest-Neighbor End-Point-Errors\")\n",
     "        plt.xlabel('End Point Error (meters)')\n",
     "        plt.ylabel('Count')\n",
@@ -2275,7 +2139,7 @@
     "            <tr><td style=\"text-align:left\"><b>Forwards Nearest Neighbor End Point Error</b></td></tr>\n",
     "            <tr>\n",
     "                <td style=\"text-align:left\">\n",
-    "                Ratio of total nearest-neighbor distance to total scene flow displacement (distnace):\n",
+    "                Ratio of total nearest-neighbor distance to total scene flow displacement:\n",
     "                  {fwd_nn_dist_to_sf_dist}\n",
     "                </td>\n",
     "            </tr>\n",
@@ -2290,6 +2154,12 @@
     "              </td>\n",
     "            <tr>\n",
     "            \n",
+    "            <tr>\n",
+    "                <td style=\"text-align:left\">\n",
+    "                  Nearest Neighbor Cloud (Grey) vs Target Cloud (Colors))<br /> {fwd_nn_html}\n",
+    "                </td>\n",
+    "            </tr> \n",
+    "            \n",
     "            <tr><td style=\"text-align:left\"><b>Backwards Nearest Neighbor End Point Error</b></td></tr>\n",
     "            <tr>\n",
     "              <td style=\"text-align:left\">\n",
@@ -2297,26 +2167,26 @@
     "                Sum: {bkd_nnepe_sum}<br/>\n",
     "              </td>\n",
     "            <tr>\n",
-    "               \n",
-    "            \n",
-    "            <tr><td style=\"text-align:left\"><b>Flow Coverage:</b> {coverage:.2f}% </td></tr>\n",
     "            \n",
     "            </table>\n",
     "        \"\"\".format(\n",
-    "                fwd_nn_dist_to_sf_dist=fwd_nn_dist_to_sf_dist,\n",
+    "                fwd_nn_dist_to_sf_dist=self.fwd_nn_dist_to_sf_dist,\n",
     "                fepe_hist=fepe_hist_html,\n",
-    "                fwd_nnepe_mean=fwd_nnepe_mean, fwd_nnepe_sum=fwd_nnepe_sum, fwd_nnepe_50th=fwd_nnepe_50th,\n",
-    "                fwd_nnepe_75th=fwd_nnepe_75th, fwd_nnepe_95th=fwd_nnepe_95th,\n",
+    "                fwd_nnepe_mean=self.fwd_nnepe_mean, fwd_nnepe_sum=self.fwd_nnepe_sum,\n",
+    "                fwd_nnepe_50th=self.fwd_nnepe_50th, fwd_nnepe_75th=self.fwd_nnepe_75th,\n",
+    "                fwd_nnepe_95th=self.fwd_nnepe_95th,\n",
+    "                fwd_nn_html=fwd_nn_html,\n",
     "                \n",
-    "                bkd_nnepe_mean=bkd_nnepe_mean,\n",
-    "                bkd_nnepe_sum=bkd_nnepe_sum)\n",
+    "                bkd_nnepe_mean=self.bkd_nnepe_mean,\n",
+    "                bkd_nnepe_sum=self.bkd_nnepe_sum)\n",
     "        return html\n",
     "    \n",
     "if SHOW_DEMO_OUTPUT:\n",
     "    %matplotlib agg\n",
-    "    for fp in DEMO_FPS:\n",
+    "    for fp in DEMO_FPS[3:]:\n",
     "        sfstats = SFlowStats.create_from(fp)\n",
-    "        show_html(sfstats.to_html() + \"</br></br></br>\")\n"
+    "        show_html(fp.to_html() + \"<br />\" + sfstats.to_html() + \"</br></br></br>\")\n",
+    "        break\n"
    ]
   },
   {
